--- a/Week 1/mission assignments/index.html
+++ b/Week 1/mission assignments/index.html
@@ -10,7 +10,7 @@
     
 </head>
 <body>
-    <div class="container">
+    <div class="content">
         <header class="title">
             <h1>MISSION STATEMENT</h1>
             <h2>BRIGHAM YOUNG UNIVERSITY-IDAHO</h2>
