Dark Mode Update

--- a/Week 1/mission assignments/index.html
+++ b/Week 1/mission assignments/index.html
@@ -6,12 +6,19 @@
     <meta name="description" content="A webpage achieving the requirements for W01 mission assignment">
     <meta name="author" content="Thea Fisk">
     <link rel="stylesheet" href="styles.css">
+    <script src="mission.js" defer></script>
     <title>W01 Mission Assignment</title>
     
 </head>
 <body>
     <div class="content">
         <header class="title">
+            <select id="change-theme">
+                <option value="light">Light</option>
+                <option value="dark">Dark</option>
+                <option value="Party">Party</option>
+            </select>
+
             <h1>MISSION STATEMENT</h1>
             <h2>BRIGHAM YOUNG UNIVERSITY-IDAHO</h2>
         </header>
