--- a/Week 1/mission assignments/index.html
+++ b/Week 1/mission assignments/index.html
@@ -16,7 +16,7 @@
             <select id="change-theme">
                 <option value="light">Light</option>
                 <option value="dark">Dark</option>
-                <option value="Party">Party</option>
+                <option value="party">Party</option>
             </select>
 
             <h1>MISSION STATEMENT</h1>
