Party Mode Updates

--- a/Week 1/mission assignments/index.html
+++ b/Week 1/mission assignments/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="styles.css">
     <script src="mission.js" defer></script>
     <title>W01 Mission Assignment</title>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+
     
 </head>
 <body>
@@ -18,7 +20,7 @@
                 <option value="dark">Dark</option>
                 <option value="party">Party</option>
             </select>
-
+            <h2 id="celebrate"></h2>
             <h1>MISSION STATEMENT</h1>
             <h2>BRIGHAM YOUNG UNIVERSITY-IDAHO</h2>
         </header>
