--- a/Week 1/mission assignments/index.html
+++ b/Week 1/mission assignments/index.html
@@ -9,8 +9,7 @@
     <script src="mission.js" defer></script>
     <title>W01 Mission Assignment</title>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
-
-    
+    <link rel="icon" href="tab-logo.jpg" type="image/jpg">
 </head>
 <body>
     <div class="content">
