Cool Pics Assignment Update

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 <body>
     <div class="links">
         <a href="Week 1/mission assignments/index.html">Mission Assignment</a>
+        <a href="Week 1/mission assignments/coolpics/coolpics.html">Coolpics</a>
     </div>
     
     <div class="content">
