--- a/Week 1/mission assignments/coolpics/coolpics.html
+++ b/Week 1/mission assignments/coolpics/coolpics.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="coolpics.css">
+    <script src="coolpics.js" defer></script>
     <title>CoolPics</title>
 </head>
 <body>
     <header>
         <h1>Cool Pics 📷</h1>
         <button class="menu">Menu</button>
-        <nav>
+        <nav id="hide">
         <a href="#">Home</a>
         <a href="#">People</a>
         <a href="#">Places</a>
