--- a/coolpics/coolpics.html
+++ b/coolpics/coolpics.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,8 +11,8 @@
 <body>
     <header>
         <h1>Cool Pics 📷</h1>
-        <button class="menu">Menu</button>
-        <nav id="hide">
+        <button id="menu">Menu</button>
+        <nav class="hide" id="mainNav">
         <a href="#">Home</a>
         <a href="#">People</a>
         <a href="#">Places</a>
