Credit Card Started

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
     <div class="links">
         <a href="Week 1/mission assignments/index.html">Mission Assignment</a>
         <a href="Week 1/mission assignments/coolpics/coolpics.html">Coolpics</a>
+        <a href="blog/index.html">Blog Assignment</a>
+        <a href="CreditCard/index.html">Credit Card</a>
     </div>
     
     <div class="content">
