--- a/CreditCard/index.html
+++ b/CreditCard/index.html
@@ -38,8 +38,8 @@
                     <div class="cvv-display">123</div>
                 </div>
                 <div class="card-info">
-                    <p>This card is property of the bank</p>
-                    <p>Call customer service for assistance</p>
+                    <p>This card is property of the listed name.</p>
+                    <p>Yay Money!</p>
                 </div>
             </div>
         </div>
