--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <a href="Week 1/mission assignments/coolpics/coolpics.html">Coolpics</a>
         <a href="blog/index.html">Blog Assignment</a>
         <a href="CreditCard/index.html">Credit Card</a>
+        <a href="register/index.html">Register</a>
     </div>
     
     <div class="content">
