--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <a href="blog/index.html">Blog Assignment</a>
         <a href="CreditCard/index.html">Credit Card</a>
         <a href="register/index.html">Register</a>
+        <a href="recipes/index.html">Recipes</a>
     </div>
     
     <div class="content">
