--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <a href="CreditCard/index.html">Credit Card</a>
         <a href="register/index.html">Register</a>
         <a href="recipes/index.html">Recipes</a>
+        <a href="PersonalSite/index.html">Personal</a>
     </div>
     
     <div class="content">
