--- a/PersonalSite/site-plan.html
+++ b/PersonalSite/site-plan.html
@@ -9,9 +9,9 @@
 
 	<body>
 		<header>
-			<h1>[Site name] Site Plan</h1>
+			<h1>Great Product Site Plan</h1>
 			<h2>Thea Fisk</h2>
-			<h2>WDD 131-[section]</h2>
+			<h2>WDD 131</h2>
 			<!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 131.03 -->
 		</header>
 		<main>
@@ -19,15 +19,15 @@
 			<hr />
 			<h2>Overview</h2>
 			<h3>Purpose</h3>
-			<p>[Your purpose here]</p>
+			<p>This website is meant to be satire about a vaguely nondescript product that is being sold by an alien.</p>
 			<!-- change this -->
 
 			<h3>Audience</h3>
-			<p>[Your audience here]</p>
+			<p>Everyone, it's a satire website for all to enjoy. </p>
 			<!-- change this -->
 
 			<h3>Dynamic elements</h3>
-			<p>[Describe dynamic elements provided by Javascript here]</p>
+			<p>The JavaScript provides progressive revelation mechanics where clicking suspicious text triggers glitch animations and unveils hidden alien transmission messages. Key interactive features include a click-counter system that gradually exposes the alien agenda, random background floating icons (UFOs, aliens, stars), an "Alien Mode" toggle that transforms the entire site's color scheme and messaging, automatic random glitch effects on text elements, dynamic page navigation, and multiple randomized alert messages that become increasingly alien-like as users interact more with the site.</p>
 			<!-- change this -->
 
 			<hr />
@@ -61,10 +61,10 @@
 					</tr>
 					<!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
 					<tr>
-						<td class="primary">[#396E94]</td>
-						<td class="secondary">[#E7C24F]</td>
-						<td class="accent1">[#A43312]</td>
-						<td class="accent2"></td>
+						<td class="primary">#667eea</td>
+						<td class="secondary">#764ba2</td>
+						<td class="accent1">#e8eaf6</td>
+						<td class="accent2">#333</td>
 					</tr>
 				</tbody>
 			</table>
@@ -75,11 +75,11 @@
 			<!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
 			<h4>
-				Heading Font: [Font Name here]
+				Heading Font: Arial
 				<!-- change this -->
 			</h4>
 			<h4>
-				Paragraph Font: [Font Name here]
+				Paragraph Font: Arial
 				<!-- change this -->
 			</h4>
 			<h3>Normal paragraph example</h3>
@@ -106,16 +106,15 @@
 			<!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
 			<nav>
 				<a href="#">Home</a>
-				<a href="#">Page2</a>
-				<a href="#">Page3</a>
+				<a href="#">About</a>
 			</nav>
 			<hr />
 
 			<h2>Content</h2>
 			<h3>Home page</h3>
-			<p>[content, images, data for the home page]</p>
-			<h3>[Page 2]</h3>
-			<p>[content, images, data for the subpage]</p>
+			<p>Content will include desctiption of "Great Product", as well as some "human" testimonials. I will also add secret text that makes a variety of messages appear. All the photos I will be using will be from stock photo sites.</p>
+			<h3>About Page</h3>
+			<p>The goal of the "About" page is to raise further suspicion about the true purpose of the website, with more secret messages. The page should comedically avoid describing what they're about, and it should continue to be vague about the company, the employees, and their goals. </p>
 			<h2>Wireframes</h2>
 			<p>
 				Create two wireframes for your site. One for each page and list them
@@ -127,14 +126,14 @@
 				[Any additional details about home that the wireframe does not make
 				clear]
 			</p>
-			<img src="#" alt="home page wireframe" />
+			<img src="images/HomePage.jpg" style="width: 35%;" alt="home page wireframe" />
 
 			<h3>[Page 2]</h3>
 			<p>
 				[Any additional details about page 2 that the wireframe does not make
 				clear]
 			</p>
-			<img src="#" alt="page 2 wireframe" />
+			<img src="images/about page.jpg" style="width: 35%;" alt="page 2 wireframe" />
 		</main>
 	</body>
 </html>
