--- a/PersonalSite/site-plan.html
+++ b/PersonalSite/site-plan.html
@@ -34,7 +34,7 @@
 			<h2>Branding</h2>
 			<h3>Website Logo</h3>
 			<!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-			<img src="#" alt="Logo image" />
+			<img src="/PersonalSite/images/ChatGPT Image Jul 25, 2025, 08_42_11 PM.png" style="width: 35%;" alt="Logo image" />
 			<hr />
 			<h2>Style Guide</h2>
 
