--- a/PersonalSite/Index.html
+++ b/PersonalSite/Index.html
@@ -28,7 +28,7 @@
                 <div class="hero-section">
                     <div class="hero-text">
                         <h2>Welcome, Fellow <span class="suspicious-text" onclick="suspiciousClick(this)">Carbon-Based Life Forms</span>!</h2>
-                        <p>Great Product is the most <span class="suspicious-text" onclick="suspiciousClick(this)">human-compatible</span> solution for all your <span class="suspicious-text" onclick="suspiciousClick(this)">terrestrial needs</span>. Created by beings who definitely understand human culture and <span class="suspicious-text" onclick="suspiciousClick(this)">do not study you from orbit</span>.</p>
+                        <p>Great Product is the most <span class="suspicious-text" onclick="suspiciousClick(this)">human-compatible</span> solution for all your <span class="suspicious-text" onclick="suspiciousClick(this)">terrestrial needs</span>. Created by beings who definitely understand human culture and <span class="suspicious-text" onclick="suspiciousClick(this)">do not study you from orbit</span>. With Great Product, you will be sleeping easy and laughing hard. You will be watching over every shoulder and opening your eyes reeeeal wide.</p>
                     </div>
                     <div class="hero-image">
                         <img src="images/bottle.jpg" alt="Great Product - Definitely Normal Human Product" class="product-image">
